Project spacing fixed

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -43,5 +43,6 @@ h3 {
     min-width: 100%;
     max-width: 100%;
     scroll-snap-align: center;
+    margin-right: 2rem;
   }
 }
